<?xml version="1.0" encoding="utf-8"?>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/t_background"
        tools:context=".act.SearchActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/searchActToolbar"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:background="@color/t_background"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="TEST" />

        <ScrollView
            android:id="@+id/scroolViewMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvTitleCountry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/Country"
                            android:textColor="@color/t_primary"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvCountry"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/select_country"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/divider1"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@color/t_background"
                            android:orientation="horizontal">

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvTitleCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/City"
                            android:textColor="@color/t_background"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/select_city"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/divider2"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="@color/t_primary"
                            android:orientation="horizontal">

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvTitleIndex"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/Index"
                            android:textColor="@color/t_secondary_text"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/edIndex"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:ems="10"
                            android:hint="@string/Index"
                            android:inputType="number"
                            android:padding="10dp"
                            android:textColorHint="@color/t_nav_text_color" />

                        <LinearLayout
                            android:id="@+id/divider4"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="5dp"
                            android:background="@color/t_ripple_color"
                            android:orientation="horizontal">

                        </LinearLayout>


                        <LinearLayout
                            android:id="@+id/divider5"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="5dp"
                            android:background="@color/t_primary"
                            android:orientation="horizontal">

                        </LinearLayout>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="применить фильтр"
                    android:textColor="@color/text_color_pix"
                    app:backgroundTint="@color/white" />

                <Button
                    android:id="@+id/btClear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="очистить фильтр"
                    android:textColor="@color/text_color_pix"
                    app:backgroundTint="@color/white" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
